# intelligent-infrastructure

./: .gitignore  Cargo.toml
agent-runtime/: Cargo.toml
agent-runtime/src/: main.rs
knowledge-search/: .coverage  Cargo.toml  DAY_5_SESSION.md  README.md  benchmark_pipeline.py  docstore.py  embeddings.py  evaluation.py  obsidian_ingestion.py  pyproject.toml  rag_pipeline.py  requirements.txt  simple_agent.py  test.py
knowledge-search/benches/: similarity.rs
knowledge-search/docs/: Week15_Performance_Baseline.md  Week16_Mental_Model_Prep.md
knowledge-search/src/: lib.rs  python.rs
knowledge-search/test_notes/: week1.md  week6.md
knowledge-search/tests/: conftest.py  test_integration.py
