[workspace]
members = ["agent-runtime",
    "knowledge-search",
    "agent-runtime", 
    # Future: "tools", etc.
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
