[package]
name = "knowledge-search"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
ndarray = "0.16"  # For vector operations
serde = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
criterion = "0.5"  # Benchmarking (Week 6 skill)
approx = "0.5"

[[bench]]
name = "similarity"
harness = false
