[package]
name = "knowledge-search"
version = "0.1.0"
edition = "2024"

[lib]
name = "knowledge_search"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
ndarray = "0.16"  # For vector operations
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = "2.0.17"
pyo3 = { version = "0.27.2", features = ["extension-module"] }

[dev-dependencies]
criterion = "0.5"  # Benchmarking (Week 6 skill)
approx = "0.5"

[[bench]]
name = "similarity"
harness = false

